--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,12 +28,12 @@
   },
   "include": [
     "bin/**/*.ts",
-    "src/**/*.ts",
+    "assets/**/*.ts",
     "lib/**/*.ts",
     "secrets/*"
   ],
   "exclude": [
     "cdk.out",
-    "src/fargate/**"
+    "assets/fargate/**"
   ]
 }
