--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "cdk-step-functions-fargate-tasks",
+  "name": "startup-snack-step-functions-fargate-tasks",
   "version": "0.1.0",
-  "bin": {
-    "cdk-step-functions-fargate-tasks": "bin/cdk-step-functions-fargate-tasks.js"
-  },
   "scripts": {
-    "build": "./scripts/build.sh"
-  },
-  "devDependencies": {
-    "@aws-cdk/assert": "1.72.0",
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "aws-cdk": "1.72.0",
-    "ts-node": "^8.1.0",
-    "typescript": "~3.9.7"
+    "build": "./scripts/build.sh",
+    "watch": "npx tsc -w",
+    "clean": "rm -rf cdk.out dist"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "1.72.0",
-    "@aws-cdk/aws-ecs": "1.72.0",
-    "@aws-cdk/aws-stepfunctions": "1.72.0",
-    "@aws-cdk/aws-stepfunctions-tasks": "1.72.0",
-    "@aws-cdk/aws-lambda": "1.72.0",
-    "@aws-cdk/aws-iam": "1.72.0",
-    "@aws-cdk/core": "1.72.0",
-    "source-map-support": "^0.5.16"
+    "@aws-cdk/assert": "^1.90.1",
+    "@aws-cdk/aws-ec2": "^1.90.1",
+    "@aws-cdk/aws-ecs": "^1.90.1",
+    "@aws-cdk/aws-iam": "^1.90.1",
+    "@aws-cdk/aws-lambda": "^1.90.1",
+    "@aws-cdk/aws-stepfunctions": "^1.90.1",
+    "@aws-cdk/aws-stepfunctions-tasks": "^1.90.1",
+    "@aws-cdk/core": "^1.90.1",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.14.31",
+    "aws-cdk": "^1.90.1",
+    "source-map-support": "^0.5.16",
+    "typescript": "^4.1.5"
   }
 }
