--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "startup-snack-step-functions-fargate-tasks",
+  "name": "cdk-step-functions-fargate-tasks",
   "version": "0.1.0",
+  "bin": {
+    "cdk-step-functions-fargate-tasks": "bin/cdk-step-functions-fargate-tasks.js"
+  },
   "scripts": {
-    "build": "./scripts/build.sh",
-    "watch": "npx tsc -w",
-    "clean": "rm -rf cdk.out dist"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.1",
+    "@types/node": "20.1.0",
+    "aws-cdk": "2.79.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "~5.0.4"
   },
   "dependencies": {
-    "@aws-cdk/assert": "^1.91.0",
-    "@aws-cdk/aws-ec2": "^1.91.0",
-    "@aws-cdk/aws-ecs": "^1.91.0",
-    "@aws-cdk/aws-iam": "^1.91.0",
-    "@aws-cdk/aws-lambda": "^1.91.0",
-    "@aws-cdk/aws-stepfunctions": "^1.91.0",
-    "@aws-cdk/aws-stepfunctions-tasks": "^1.91.0",
-    "@aws-cdk/core": "^1.91.0",
-    "@types/jest": "^26.0.10",
-    "@types/node": "^14.14.31",
-    "aws-cdk": "^1.91.0",
-    "source-map-support": "^0.5.16",
-    "typescript": "^4.1.5"
+    "aws-cdk-lib": "2.79.1",
+    "constructs": "^10.0.0",
+    "path": "^0.12.7",
+    "source-map-support": "^0.5.21"
   }
 }
