--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,31 @@
 {
   "compilerOptions": {
-    "alwaysStrict": true,
-    "declaration": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "lib": [
-      "es2018",
-      "es2019",
-      "es2020",
-      "esnext"
-    ],
+    "target": "ES2020",
     "module": "commonjs",
-    "noFallthroughCasesInSwitch": false,
+    "lib": [
+      "es2020",
+      "dom"
+    ],
+    "declaration": true,
+    "strict": true,
     "noImplicitAny": true,
-    "noImplicitReturns": true,
+    "strictNullChecks": true,
     "noImplicitThis": true,
+    "alwaysStrict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "strict": true,
-    "strictNullChecks": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": false,
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "target": "es2018",
-    "typeRoots": ["./node_modules/@types"],
-    "outDir": "dist"
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
   },
-  "include": [
-    "bin/**/*.ts",
-    "assets/**/*.ts",
-    "lib/**/*.ts",
-    "secrets/*"
-  ],
   "exclude": [
-    "cdk.out",
-    "assets/fargate/**"
+    "node_modules",
+    "cdk.out"
   ]
 }
